# graphql-cli

./: Cargo.toml  README.md
graphql/: github_issues.graphql  github_issues_with_x.graphql
src/: lib.rs  main.rs
