[package]
name = "graphquery"
version = "0.3.0"
edition = "2021"

description = "A simple cli tool to make graphql request."
license = "MIT"
repository = "https://github.com/jrdeng/graphquery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "graphquery_lib"

[[bin]]
name = "graphquery"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
